[gd_scene load_steps=6 format=3 uid="uid://tuh0636ori41"]

[ext_resource type="Script" path="res://menus/GUI/HSGameOverScreen.gd" id="1_fvhhc"]
[ext_resource type="Texture2D" uid="uid://cshe11vvxq13n" path="res://assets/GUI/GUI-huge.png" id="2_tofkg"]
[ext_resource type="AudioStream" uid="uid://cukdeiwynlgm5" path="res://assets/sounds/highscore_saved.wav" id="3_pcu5u"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5vybk"]
texture = ExtResource("2_tofkg")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0

[sub_resource type="TileSet" id="TileSet_doalb"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_5vybk")

[node name="HSGameOverScreen" type="Panel"]
offset_left = 2.0
offset_right = 1152.0
offset_bottom = 647.0
script = ExtResource("1_fvhhc")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 390.0
offset_top = 108.0
offset_right = 782.0
offset_bottom = 168.0
theme_override_font_sizes/font_size = 41
text = "New Highscore!"

[node name="UserTime" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
offset_left = 603.0
offset_top = 257.0
offset_right = 771.0
offset_bottom = 307.0
theme_override_font_sizes/font_size = 32
text = "00:00:00"

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 377.0
offset_top = 258.0
offset_right = 585.0
offset_bottom = 308.0
theme_override_font_sizes/font_size = 32
text = "Your Time:"

[node name="UserScore" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
offset_left = 486.0
offset_top = 182.0
offset_right = 668.0
offset_bottom = 231.0
theme_override_font_sizes/font_size = 35
text = "0000000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_doalb")
format = 2
layer_0/tile_data = PackedInt32Array(458756, 589824, 5, 458757, 655360, 5, 458758, 655360, 5, 458759, 655360, 5, 458760, 655360, 5, 458761, 655360, 5, 458762, 655360, 5, 458763, 655360, 5, 458764, 655360, 5, 458765, 720896, 5, 524301, 720896, 5, 524300, 655360, 5, 524299, 655360, 5, 524298, 655360, 5, 524297, 655360, 5, 524296, 655360, 5, 524295, 655360, 5, 524294, 655360, 5, 524293, 655360, 5, 524292, 589824, 5)

[node name="QuitButton" type="Button" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = -1
offset_left = 266.0
offset_top = 522.0
offset_right = 883.0
offset_bottom = 559.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "Quit"
flat = true

[node name="MainMenuButton" type="Button" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = -1
offset_left = 269.0
offset_top = 459.0
offset_right = 884.0
offset_bottom = 496.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "Main menu"
flat = true

[node name="PlayerName" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
offset_left = 313.0
offset_top = 336.0
offset_right = 564.0
offset_bottom = 367.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.6, 1.6)
theme_override_font_sizes/font_size = 15
placeholder_text = "-- enter your name --"
alignment = 1
max_length = 15

[node name="HSSaveButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
offset_left = 731.0
offset_top = 341.0
offset_right = 787.0
offset_bottom = 379.0
text = "Save"

[node name="HSSaveSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_pcu5u")
bus = &"Sfx"

[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="HSSaveButton" to="." method="_on_hs_save_button_pressed"]
